# gnosis-labs-hackathon-starter

./: .env.example  README.md  mypy.ini  pyproject.toml
.github/workflows/: python_ci.yaml
deployment/: README.md  agent.py  cron_runner.py  local_runner.py  remote_runner.py
general_agent/: functions.py  main.py  remote_runner.py  web3_functions.py
trader/: app.py  benchmark.py  main.py  prediction.py
